--- a/OR_HW1.ipynb
+++ b/OR_HW1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-02-29\n"
+     ]
+    }
+   ],
    "source": [
     "eg1 = Model(\"eg1\")\n",
     "\n",
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1141,7 @@
        " (9, 99): <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1167,19 +1176,39 @@
       "\n",
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "GurobiError",
-     "evalue": "Model too large for size-limited license; visit https://www.gurobi.com/free-trial for a full license",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mGurobiError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-111-616e8bb220bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.optimize\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mGurobiError\u001b[0m: Model too large for size-limited license; visit https://www.gurobi.com/free-trial for a full license"
+      "\n",
+      "Optimize a model with 4110 rows, 3010 columns and 6000 nonzeros\n",
+      "Model fingerprint: 0x81f26ee3\n",
+      "Model has 2000 quadratic objective terms\n",
+      "Variable types: 0 continuous, 3010 integer (10 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [1e+00, 8e+03]\n",
+      "  QObjective range [2e+00, 2e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 3e+03]\n",
+      "Found heuristic solution: objective 6.064400e+13\n",
+      "Presolve removed 4000 rows and 2010 columns\n",
+      "Presolve time: 0.06s\n",
+      "Presolved: 110 rows, 1000 columns, 2000 nonzeros\n",
+      "Found heuristic solution: objective 1133506.0000\n",
+      "Variable types: 0 continuous, 1000 integer (0 binary)\n",
+      "Found heuristic solution: objective 1130230.0000\n",
+      "\n",
+      "Root relaxation: objective 4.490400e+05, 115 iterations, 0.01 seconds (0.00 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0    449040.00000 449040.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 1 nodes (115 simplex iterations) in 0.17 seconds (0.00 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 4: 449040 1.13023e+06 1.13351e+06 6.0644e+13 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 4.490400000000e+05, best bound 4.490400000000e+05, gap 0.0000%\n"
      ]
     }
    ],
