--- a/OR_HW1.ipynb
+++ b/OR_HW1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
        " (9, 99): <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
       "H    0     0                    486804.00000 486480.594  0.07%     -    0s\n",
       "H    0     0                    486706.00000 486480.594  0.05%     -    0s\n",
       "\n",
-      "Explored 1 nodes (167 simplex iterations) in 0.17 seconds (0.04 work units)\n",
+      "Explored 1 nodes (167 simplex iterations) in 0.13 seconds (0.04 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 3: 486706 486804 623271 \n",
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2409,7 @@
        " (9, 99): <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -2499,12 +2499,11 @@
       "     0     0 489881.649    0   63 495793.000 489881.649  1.19%     -    0s\n",
       "     0     0 489881.649    0   63 495793.000 489881.649  1.19%     -    0s\n",
       "     0     2 489881.649    0   63 495793.000 489881.649  1.19%     -    0s\n",
-      "H 3236  1589                    494916.00000 491427.381  0.70%   9.7    2s\n",
+      "H 3236  1589                    494916.00000 491427.381  0.70%   9.7    1s\n",
       "H 3295  1537                    494139.00000 491502.148  0.53%   9.7    2s\n",
       "H 3415  1344                    493665.00000 491502.148  0.44%   9.7    2s\n",
       "H 3856  1366                    493401.00000 491604.732  0.36%  10.0    2s\n",
       "H 7136  2058                    493168.00000 492068.146  0.22%  11.8    3s\n",
-      " 12527   858     cutoff   35      493168.000 492725.667  0.09%  13.9    5s\n",
       "\n",
       "Cutting planes:\n",
       "  Lift-and-project: 1\n",
@@ -2517,7 +2516,7 @@
       "  Zero half: 1\n",
       "  RLT: 3\n",
       "\n",
-      "Explored 13932 nodes (192098 simplex iterations) in 5.28 seconds (2.26 work units)\n",
+      "Explored 13932 nodes (192098 simplex iterations) in 4.57 seconds (2.26 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 10: 493168 493401 493665 ... 945624\n",
@@ -2541,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -2621,7 +2620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2668,8 +2667,11 @@
     "    for j in dcs:\n",
     "        w[i].append(eg2.addVar(lb = 0, vtype = GRB.BINARY, name = \"w\" + str(i+1) + str(j+1)))\n",
     "\n",
-    "d = eg2.addVar(lb = 0, vtype = GRB.INTEGER, name = \"d\")\n",
-    "B = eg2.addVar(lb = 0, vtype = GRB.INTEGER, name = \"B\")"
+    "d = []\n",
+    "for i in stores:\n",
+    "    d.append(eg2.addVar(lb = 0, vtype = GRB.INTEGER, name = \"d\"))\n",
+    "B = eg2.addVar(lb = 0, vtype = GRB.INTEGER, name = \"B\")\n",
+    "max_distance = eg2.addVar(lb = 0, vtype = GRB.INTEGER, name = \"max_distance\")"
    ]
   },
   {
@@ -2682,11 +2684,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eg2.setObjective(d,GRB.MINIMIZE)"
+    "eg2.setObjective(max_distance,GRB.MINIMIZE)"
    ]
   },
   {
@@ -2699,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -3707,7 +3709,7 @@
        " (9, 99): <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3718,10 +3720,10 @@
     "eg2.addConstrs((s[j] <= v[j] * dc_maxscale[j] for j in dcs), \"DC scale lv <= its max scale lv\")\n",
     "eg2.addConstrs((quicksum(r[i][j] for i in stores) >= 0 for j in dcs), \"replenishment >= 0\")\n",
     "\n",
-    "eg2.addConstrs((construction_costs[j] + maintenance_costs[j] * s[j] <= B for j in dcs), \"TC cannot > B\")\n",
+    "eg2.addConstr(quicksum(construction_costs[j] + maintenance_costs[j] * s[j] for j in dcs) <= B, \"TC cannot > B\")\n",
     "eg2.addConstrs((quicksum(w[i][j] for j in dcs) == 1 for i in stores), \"每間store都有一個最近的DC\")\n",
     "eg2.addConstrs((w[i][j] <= v[j] for i in stores for j in dcs), \"要確定那間DC有蓋\")\n",
-    "eg2.addConstrs((d >= quicksum(w[i][j] * (wx[i][j] + wy[i][j]) for j in dcs) for i in stores), \"每間store到最近的DC的最遠距離\")\n",
+    "eg2.addConstrs((max_distance >= quicksum(w[i][j] * (wx[i][j] + wy[i][j]) for j in dcs) for i in stores), \"每間store到最近的DC的最遠距離\")\n",
     "eg2.addConstrs((wx[i][j] >= dc_xcoord[j] - store_xcoord[i] for i in stores for j in dcs), \"dis(dc-store), x-axis\")\n",
     "eg2.addConstrs((wx[i][j] >= store_xcoord[i] - dc_xcoord[j] for j in dcs for i in stores), \"dis(store-dc), x-axis\")\n",
     "eg2.addConstrs((wy[i][j] >= dc_ycoord[j] - store_ycoord[i] for i in stores for j in dcs), \"dis(dc-store), y-axis\")\n",
@@ -3738,7 +3740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -3750,26 +3752,26 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 5140 rows, 4022 columns and 9050 nonzeros\n",
-      "Model fingerprint: 0xeea8e159\n",
+      "Optimize a model with 5131 rows, 4122 columns and 9041 nonzeros\n",
+      "Model fingerprint: 0xa10ff3f9\n",
       "Model has 200 quadratic constraints\n",
-      "Variable types: 0 continuous, 4022 integer (1010 binary)\n",
+      "Variable types: 0 continuous, 4122 integer (1010 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 3e+03]\n",
       "  QMatrix range    [1e+00, 1e+00]\n",
       "  QLMatrix range   [1e+00, 1e+00]\n",
       "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 8e+03]\n",
+      "  RHS range        [1e+00, 4e+04]\n",
       "  QRHS range       [1e+02, 2e+02]\n",
-      "Presolve removed 4030 rows and 11 columns\n",
+      "Presolve removed 4021 rows and 111 columns\n",
       "Presolve time: 0.03s\n",
       "Presolved: 8310 rows, 11011 columns, 24110 nonzeros\n",
       "Presolved model has 4000 SOS constraint(s)\n",
       "Variable types: 0 continuous, 11011 integer (3010 binary)\n",
       "Found heuristic solution: objective 51.0000000\n",
       "\n",
-      "Explored 1 nodes (0 simplex iterations) in 0.18 seconds (0.08 work units)\n",
+      "Explored 1 nodes (0 simplex iterations) in 0.15 seconds (0.08 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 51 \n",
@@ -3793,7 +3795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -3873,7 +3875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3928,7 +3930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3950,7 +3952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -4958,7 +4960,7 @@
        " (9, 99): <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4987,7 +4989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -5019,7 +5021,7 @@
       "Found heuristic solution: objective 1155671.0000\n",
       "Found heuristic solution: objective 1118287.0000\n",
       "\n",
-      "Root relaxation: objective 4.863800e+05, 1668 iterations, 0.02 seconds (0.01 work units)\n",
+      "Root relaxation: objective 4.863800e+05, 1668 iterations, 0.01 seconds (0.01 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
@@ -5027,7 +5029,7 @@
       "     0     0 486380.033    0    1 1118287.00 486380.033  56.5%     -    0s\n",
       "H    0     0                    486706.00000 486380.033  0.07%     -    0s\n",
       "\n",
-      "Explored 1 nodes (1668 simplex iterations) in 0.22 seconds (0.05 work units)\n",
+      "Explored 1 nodes (1668 simplex iterations) in 0.23 seconds (0.05 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 3: 486706 1.11829e+06 1.15567e+06 \n",
@@ -5051,7 +5053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -5131,13 +5133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d0434436d38426fbf4685ecfb001618",
+       "model_id": "8887a7cf26a44381aa25e1e146841b0b",
        "version_major": 2,
        "version_minor": 0
       },
