--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -15,299 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>27</th>\n",
-       "      <th>From</th>\n",
-       "      <th>To</th>\n",
-       "      <th>Distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "27 From To Distance\n",
-       "28    1  1        0\n",
-       "29    1  2      180\n",
-       "30    1  3      450\n",
-       "31    1  4      300\n",
-       "32    1  5      330\n",
-       "33    1  6      270\n",
-       "34    2  1      180\n",
-       "35    2  2        0\n",
-       "36    2  3      330\n",
-       "37    2  4      240\n",
-       "38    2  5      300\n",
-       "39    2  6      360\n",
-       "40    3  1      450\n",
-       "41    3  2      330\n",
-       "42    3  3        0\n",
-       "43    3  4      180\n",
-       "44    3  5      210\n",
-       "45    3  6      240\n",
-       "46    4  1      300\n",
-       "47    4  2      240\n",
-       "48    4  3      180\n",
-       "49    4  4        0\n",
-       "50    4  5      120\n",
-       "51    4  6      150\n",
-       "52    5  1      330\n",
-       "53    5  2      300\n",
-       "54    5  3      210\n",
-       "55    5  4      120\n",
-       "56    5  5        0\n",
-       "57    5  6       90\n",
-       "58    6  1      270\n",
-       "59    6  2      360\n",
-       "60    6  3      240\n",
-       "61    6  4      150\n",
-       "62    6  5       90\n",
-       "63    6  6        0"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To      1   10    2    3    4    5    6    7    8    9\n",
+      "From                                                  \n",
+      "1       0  840  360  360  510  690  510  690  300  540\n",
+      "10    840    0  480  540  330  270  450  630  600  480\n",
+      "2     360  480    0  660  510  630  810  990  120  840\n",
+      "3     360  540  660    0  210  390  210  330  660  240\n",
+      "4     510  330  510  210    0  180  300  480  510  330\n",
+      "5     690  270  630  390  180    0  180  360  630  210\n",
+      "6     510  450  810  210  300  180    0  180  810   30\n",
+      "7     690  630  990  330  480  360  180    0  990  150\n",
+      "8     300  600  120  660  510  630  810  990    0  840\n",
+      "9     540  480  840  240  330  210   30  150  840    0\n"
+     ]
     }
    ],
    "source": [
@@ -336,9 +63,8 @@
     "df_distance.columns = df_distance.iloc[0]\n",
     "df_distance = df_distance.dropna(axis=1)\n",
     "df_distance = df_distance[1:]\n",
-    "df_distance\n",
-    "\n",
-    "\n"
+    "distance = df_distance.pivot(index='From', columns='To', values='Distance')\n",
+    "print(distance)"
    ]
   },
   {
