--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,70 +17,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 Car level Hour rate\n",
-      "12         1       100\n",
-      "13         2       400\n",
-      "15 Order ID Level Pick-up station Return station      Pick-up time  \\\n",
-      "16        1     1               1              6  2023/01/04 01:00   \n",
-      "17        2     1               4              5  2023/01/01 16:00   \n",
-      "18        3     1               5              1  2023/01/02 03:30   \n",
-      "19        4     1               1              2  2023/01/03 12:00   \n",
-      "20        5     2               6              6  2023/01/01 00:00   \n",
-      "21        6     1               3              4  2023/01/04 23:00   \n",
-      "22        7     2               2              1  2023/01/02 03:30   \n",
-      "23        8     2               6              6  2023/01/05 04:30   \n",
-      "24        9     2               3              4  2023/01/01 19:30   \n",
-      "25       10     1               4              2  2023/01/01 06:00   \n",
+      "3 Car ID Level Initial station\n",
+      "4      1     1               1\n",
+      "5      2     1               2\n",
+      "6      3     1               1\n",
+      "7      4     1               3\n",
+      "8      5     1               2\n",
+      "10 Car level Hour rate\n",
+      "11         1       100\n",
+      "13 Order ID Level Pick-up station Return station      Pick-up time  \\\n",
+      "14        1     1               2              2  2023/01/01 06:00   \n",
+      "15        2     1               3              3  2023/01/01 00:30   \n",
+      "16        3     1               1              1  2023/01/02 20:30   \n",
+      "17        4     1               3              2  2023/01/05 13:00   \n",
+      "18        5     1               2              1  2023/01/02 09:30   \n",
+      "19        6     1               2              3  2023/01/03 03:00   \n",
+      "20        7     1               2              1  2023/01/06 06:00   \n",
+      "21        8     1               3              1  2023/01/06 16:00   \n",
+      "22        9     1               1              3  2023/01/04 16:30   \n",
+      "23       10     1               1              3  2023/01/08 01:00   \n",
       "\n",
-      "15       Return time       Time span  Time units  Pick-up time (ordinal)  \\\n",
-      "16  2023/01/04 20:00 0 days 19:00:00          38                     146   \n",
-      "17  2023/01/03 00:00 1 days 08:00:00          64                      32   \n",
-      "18  2023/01/04 11:30 2 days 08:00:00         112                      55   \n",
-      "19  2023/01/05 15:00 2 days 03:00:00         102                     120   \n",
-      "20  2023/01/04 20:00 3 days 20:00:00         184                       0   \n",
-      "21  2023/01/05 14:00 0 days 15:00:00          30                     190   \n",
-      "22  2023/01/04 23:30 2 days 20:00:00         136                      55   \n",
-      "23  2023/01/05 14:30 0 days 10:00:00          20                     201   \n",
-      "24  2023/01/04 15:30 2 days 20:00:00         136                      39   \n",
-      "25  2023/01/05 06:00 4 days 00:00:00         192                      12   \n",
+      "13       Return time       Time span  Time units  Pick-up time (ordinal)  \\\n",
+      "14  2023/01/01 17:00 0 days 11:00:00          22                      12   \n",
+      "15  2023/01/04 21:30 3 days 21:00:00         186                       1   \n",
+      "16  2023/01/06 15:30 3 days 19:00:00         182                      89   \n",
+      "17  2023/01/08 23:00 3 days 10:00:00         164                     218   \n",
+      "18  2023/01/04 19:30 2 days 10:00:00         116                      67   \n",
+      "19  2023/01/06 03:00 3 days 00:00:00         144                     102   \n",
+      "20  2023/01/09 16:00 3 days 10:00:00         164                     252   \n",
+      "21  2023/01/08 18:00 2 days 02:00:00         100                     272   \n",
+      "22  2023/01/07 22:30 3 days 06:00:00         156                     177   \n",
+      "23  2023/01/10 10:00 2 days 09:00:00         114                     338   \n",
       "\n",
-      "15  Return time (ordinal)  \n",
-      "16                    184  \n",
-      "17                     96  \n",
-      "18                    167  \n",
-      "19                    222  \n",
-      "20                    184  \n",
-      "21                    220  \n",
-      "22                    191  \n",
-      "23                    221  \n",
-      "24                    175  \n",
-      "25                    204  \n",
-      "To     1   2   3   4   5   6\n",
-      "From                        \n",
-      "1      0   6  15  10  11   9\n",
-      "2      6   0  11   8  10  12\n",
-      "3     15  11   0   6   7   8\n",
-      "4     10   8   6   0   4   5\n",
-      "5     11  10   7   4   0   3\n",
-      "6      9  12   8   5   3   0\n"
+      "13  Return time (ordinal)  \n",
+      "14                     34  \n",
+      "15                    187  \n",
+      "16                    271  \n",
+      "17                    382  \n",
+      "18                    183  \n",
+      "19                    246  \n",
+      "20                    416  \n",
+      "21                    372  \n",
+      "22                    333  \n",
+      "23                    452  \n",
+      "To    1   2   3\n",
+      "From           \n",
+      "1     0   6   7\n",
+      "2     6   0  11\n",
+      "3     7  11   0\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data\\instance05.txt', header=None)\n",
+    "df = pd.read_csv('data\\instance03.txt', header=None)\n",
     "n_S = int(df_main['n_S'])\n",
     "n_C = int(df_main['n_C'])\n",
     "n_L = int(df_main['n_L'])\n",
     "n_K = int(df_main['n_K'])\n",
     "n_D = int(df_main['n_D'])\n",
-    "B = int(df_main['B'])\n",
+    "B = int(df_main['B'])//30\n",
     "\n",
     "df_main = df.iloc[:2,:]\n",
     "df_main.columns = df_main.iloc[0]\n",
@@ -90,6 +92,7 @@
     "df_car.columns = df_car.iloc[0]\n",
     "df_car = df_car.dropna(axis=1)\n",
     "df_car = df_car[1:]\n",
+    "print(df_car)\n",
     "\n",
     "df_car_lv = df.iloc[n_C+5:n_C+n_L+6,:]\n",
     "df_car_lv.columns = df_car_lv.iloc[0]\n",
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,17 +133,28 @@
     "#-------- Add variables as a list ---------#\n",
     "# xmk = 1 if order k is processed on car m\n",
     "x = []\n",
-    "for m in n_C:\n",
+    "for m in range(n_C):\n",
     "    x.append([])\n",
-    "    for k in n_K:\n",
-    "        x[i].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"x\" + str(m+1) + str(k+1)))\n",
+    "    for k in range(n_K):\n",
+    "        x[m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"x\" + str(m+1) + str(k+1)))\n",
+    "\n",
+    "# Tij = rearrangment time to move car from station i to station j\n",
+    "T = []\n",
+    "for i in range(n_S):\n",
+    "    T.append([])\n",
+    "    for j in range(n_S):\n",
+    "        T[i].append(eg1.addVar(lb=distance.iloc[j, i], vtype=GRB.INTEGER, name=\"T\" + str(i+1) + str(j+1)))\n",
+    "\n",
+    "# Ck = completion time of order k\n",
+    "C = []\n",
+    "for k in range(n_K):\n",
+    "    C.append(eg1.addVar(lb=0, vtype = GRB.INTEGER, name = \"C\" + str(k+1)))\n",
     "\n",
     "# Om = latest completion time of orders on car m\n",
     "O = []\n",
-    "for m in n_C:\n",
-    "    O.append(eg1.addVar(lb=0, vtype = INTEGER, name = \"O\" + str(m+1)))\n",
-    "\n",
-    "B = eg1.addVar(lb = 0, vtype = GRB.INTEGER, name = \"max_rearrangement time\")\n"
+    "for m in range(n_C):\n",
+    "    O.append(eg1.addVar(lb=0, vtype = GRB.INTEGER, name = \"O\" + str(m+1)))\n",
+    "\n"
    ]
   },
   {
