腦子是一坨屎QQ

--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -26,62 +26,46 @@
      "text": [
       "3 Car ID Level Initial station\n",
       "4      1     1               1\n",
-      "5      2     1               2\n",
-      "6      3     1               1\n",
-      "7      4     1               3\n",
-      "8      5     1               2\n",
-      "10 Car level Hour rate\n",
-      "11         1       100\n",
-      "13 Order ID Level Pick-up station Return station      Pick-up time  \\\n",
-      "14        1     1               2              2  2023/01/01 06:00   \n",
-      "15        2     1               3              3  2023/01/01 00:30   \n",
-      "16        3     1               1              1  2023/01/02 20:30   \n",
-      "17        4     1               3              2  2023/01/05 13:00   \n",
-      "18        5     1               2              1  2023/01/02 09:30   \n",
-      "19        6     1               2              3  2023/01/03 03:00   \n",
-      "20        7     1               2              1  2023/01/06 06:00   \n",
-      "21        8     1               3              1  2023/01/06 16:00   \n",
-      "22        9     1               1              3  2023/01/04 16:30   \n",
-      "23       10     1               1              3  2023/01/08 01:00   \n",
+      "5      2     2               1\n",
+      "6      3     2               2\n",
+      "8  Car level Hour rate\n",
+      "9          1       200\n",
+      "10         2       300\n",
+      "  Order ID Level Pick-up station Return station      Pick-up time  \\\n",
+      "0        1     1               2              1  2023/01/02 09:00   \n",
+      "1        2     1               1              1  2023/01/01 00:30   \n",
+      "2        3     1               2              1  2023/01/02 18:00   \n",
+      "3        4     2               1              2  2023/01/01 08:30   \n",
+      "4        5     2               2              1  2023/01/01 09:30   \n",
       "\n",
-      "13       Return time       Time span  Time units  Pick-up time (ordinal)  \\\n",
-      "14  2023/01/01 17:00 0 days 11:00:00          22                      12   \n",
-      "15  2023/01/04 21:30 3 days 21:00:00         186                       1   \n",
-      "16  2023/01/06 15:30 3 days 19:00:00         182                      89   \n",
-      "17  2023/01/08 23:00 3 days 10:00:00         164                     218   \n",
-      "18  2023/01/04 19:30 2 days 10:00:00         116                      67   \n",
-      "19  2023/01/06 03:00 3 days 00:00:00         144                     102   \n",
-      "20  2023/01/09 16:00 3 days 10:00:00         164                     252   \n",
-      "21  2023/01/08 18:00 2 days 02:00:00         100                     272   \n",
-      "22  2023/01/07 22:30 3 days 06:00:00         156                     177   \n",
-      "23  2023/01/10 10:00 2 days 09:00:00         114                     338   \n",
+      "        Return time       Time span  Time units  Pick-up time (ordinal)  \\\n",
+      "0  2023/01/03 12:00 1 days 03:00:00          54                      66   \n",
+      "1  2023/01/02 10:30 1 days 10:00:00          68                       1   \n",
+      "2  2023/01/03 02:00 0 days 08:00:00          16                      84   \n",
+      "3  2023/01/02 14:30 1 days 06:00:00          60                      17   \n",
+      "4  2023/01/02 02:30 0 days 17:00:00          34                      19   \n",
       "\n",
-      "13  Return time (ordinal)  \n",
-      "14                     34  \n",
-      "15                    187  \n",
-      "16                    271  \n",
-      "17                    382  \n",
-      "18                    183  \n",
-      "19                    246  \n",
-      "20                    416  \n",
-      "21                    372  \n",
-      "22                    333  \n",
-      "23                    452  \n",
-      "To    1   2   3\n",
-      "From           \n",
-      "1     0   6   7\n",
-      "2     6   0  11\n",
-      "3     7  11   0\n"
+      "   Return time (ordinal) Hour rate  \n",
+      "0                    120       200  \n",
+      "1                     69       200  \n",
+      "2                    100       200  \n",
+      "3                     77       300  \n",
+      "4                     53       300  \n",
+      "To    1  2\n",
+      "From      \n",
+      "1     0  3\n",
+      "2     3  0\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data\\instance03.txt', header=None)\n",
+    "df = pd.read_csv('data\\instance01.txt', header=None)\n",
     "n_S = int(df_main['n_S'])\n",
     "n_C = int(df_main['n_C'])\n",
     "n_L = int(df_main['n_L'])\n",
     "n_K = int(df_main['n_K'])\n",
     "n_D = int(df_main['n_D'])\n",
+    "n_T = n_D * 48\n",
     "B = int(df_main['B'])//30\n",
     "\n",
     "df_main = df.iloc[:2,:]\n",
@@ -110,6 +94,8 @@
     "time_unit = pd.Timedelta('30 minutes')\n",
     "df_order['Pick-up time (ordinal)'] = df_order.apply(lambda row: pd.to_datetime(row['Pick-up time']) - first_period_start, axis=1).apply(lambda x: math.ceil(x.total_seconds() / 1800))\n",
     "df_order['Return time (ordinal)'] = df_order.apply(lambda row: pd.to_datetime(row['Return time']) - first_period_start, axis=1).apply(lambda x: math.ceil(x.total_seconds() / 1800))\n",
+    "df_order = pd.merge(df_order, df_car_lv, left_on='Level', right_on='Car level', how='left')\n",
+    "df_order = df_order.drop(['Car level'], axis=1)\n",
     "print(df_order)\n",
     "\n",
     "df_distance = df.iloc[n_C+n_L+n_K+9:n_C+n_L+n_K+n_S**2+10,:]\n",
@@ -124,13 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "eg1 = Model(\"eg1\")\n",
     "\n",
     "#-------- Add variables as a list ---------#\n",
+    "# zimt = 1 if car m is at station i in period t\n",
+    "z = []\n",
+    "for i in range(n_S):\n",
+    "    z.append([])\n",
+    "    for m in range(n_C):\n",
+    "        z[i].append([])\n",
+    "        for t in range(n_T):\n",
+    "            z[i][m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"z\" + str(i+1) + str(m+1) + str(t+1)))\n",
+    "\n",
     "# xmk = 1 if order k is processed on car m\n",
     "x = []\n",
     "for m in range(n_C):\n",
@@ -138,12 +133,25 @@
     "    for k in range(n_K):\n",
     "        x[m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"x\" + str(m+1) + str(k+1)))\n",
     "\n",
-    "# Tij = rearrangment time to move car from station i to station j\n",
-    "T = []\n",
+    "# Rk = revenue of order k\n",
+    "R = []\n",
+    "for k in range(n_K):\n",
+    "    time_units = int(df_order.loc[k, 'Time units'])\n",
+    "    hour_rate = int(df_order.loc[k, 'Hour rate'])\n",
+    "    R.append(eg1.addVar(lb=time_units*hour_rate, vtype=GRB.INTEGER, name=\"R\" + str(k+1)))\n",
+    "\n",
+    "# pk = processing time for order k\n",
+    "p = []\n",
+    "for k in range(n_K):\n",
+    "    time_units = int(df_order.loc[k, 'Time units'])\n",
+    "    p.append(eg1.addVar(lb=time_units, vtype=GRB.INTEGER, name=\"p\" + str(k+1)))\n",
+    "\n",
+    "# rtij = rearrangment time to move car from station i to station j\n",
+    "rt = []\n",
     "for i in range(n_S):\n",
-    "    T.append([])\n",
+    "    rt.append([])\n",
     "    for j in range(n_S):\n",
-    "        T[i].append(eg1.addVar(lb=distance.iloc[j, i], vtype=GRB.INTEGER, name=\"T\" + str(i+1) + str(j+1)))\n",
+    "        rt[i].append(eg1.addVar(lb=distance.iloc[j, i], vtype=GRB.INTEGER, name=\"rt\" + str(i+1) + str(j+1)))\n",
     "\n",
     "# Ck = completion time of order k\n",
     "C = []\n",
@@ -159,14 +167,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "eg1.setObjective(\n",
-    "    quicksum(R[k] for k in n_K)\\\n",
+    "    quicksum(R[k] for k in range(n_K))\\\n",
     "    ,GRB.MAXIMIZE\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 1: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 2: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 3: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 4: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 5: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 6: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 7: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 8: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 9: <gurobi.Constr *Awaiting Model Update*>}"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eg1.addConstrs((quicksum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n"
    ]
   },
   {
