--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,12 +162,13 @@
     "O = []\n",
     "for m in range(n_C):\n",
     "    O.append(eg1.addVar(lb=0, vtype = GRB.INTEGER, name = \"O\" + str(m+1)))\n",
-    "\n"
+    "\n",
+    "Cmax = eg1.addVar(lb = 48*n_D, vtype = GRB.INTEGER, name = \"Cmax\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -187,23 +188,17 @@
       "text/plain": [
        "{0: <gurobi.Constr *Awaiting Model Update*>,\n",
        " 1: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 2: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 3: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 4: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 5: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 6: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 7: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 8: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 9: <gurobi.Constr *Awaiting Model Update*>}"
+       " 2: <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eg1.addConstrs((quicksum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n"
+    "eg1.addConstrs((quicksum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n",
+    "eg1.addConstrs((O[m] <= Cmax for m in range(n_C)), \"links the individual car makespan to the overall schedule makespan\")"
    ]
   },
   {
