--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -110,23 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
     "eg1 = Model(\"eg1\")\n",
     "\n",
     "#-------- Add variables as a list ---------#\n",
-    "# zimt = 1 if car m is at station i in period t\n",
-    "z = []\n",
+    "# wimt = 1 if car m is at station i in period t; wimt = 0 o.w.\n",
+    "w = []\n",
     "for i in range(n_S):\n",
-    "    z.append([])\n",
+    "    w.append([])\n",
     "    for m in range(n_C):\n",
-    "        z[i].append([])\n",
+    "        w[i].append([])\n",
     "        for t in range(n_T):\n",
-    "            z[i][m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"z\" + str(i+1) + str(m+1) + str(t+1)))\n",
+    "            w[i][m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"w\" + str(i+1) + str(m+1) + str(t+1)))\n",
     "\n",
-    "# xmk = 1 if order k is processed on car m\n",
+    "# zpqm = 1 if order p and order q are on car m and order p is before order q\n",
+    "z = []\n",
+    "for p in range(n_K):\n",
+    "    z.append([])\n",
+    "    for q in range(n_K):\n",
+    "        z[p].append([])\n",
+    "        for m in range(n_C):\n",
+    "            z[p][q].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"z\" + str(p+1) + str(q+1) + str(m+1)))\n",
+    "\n",
+    "# xmk = 1 if order k is assigned to car m\n",
     "x = []\n",
     "for m in range(n_C):\n",
     "    x.append([])\n",
@@ -140,11 +149,23 @@
     "    hour_rate = int(df_order.loc[k, 'Hour rate'])\n",
     "    R.append(eg1.addVar(lb=time_units*hour_rate, vtype=GRB.INTEGER, name=\"R\" + str(k+1)))\n",
     "\n",
-    "# pk = processing time for order k\n",
-    "p = []\n",
+    "# rk = rental time for order k\n",
+    "r = []\n",
     "for k in range(n_K):\n",
     "    time_units = int(df_order.loc[k, 'Time units'])\n",
-    "    p.append(eg1.addVar(lb=time_units, vtype=GRB.INTEGER, name=\"p\" + str(k+1)))\n",
+    "    r.append(eg1.addVar(lb=time_units, vtype=GRB.INTEGER, name=\"r\" + str(k+1)))\n",
+    "\n",
+    "# lv_Dk = demanded car level of order k\n",
+    "lv_Dk = []\n",
+    "for k in range(n_K):\n",
+    "    level_demanded = int(df_order.loc[k, 'Level'])\n",
+    "    lv_Dk.append(eg1.addVar(lb=level_demanded, vtype=GRB.INTEGER, name=\"lv_Dk\" + str(k+1)))\n",
+    "\n",
+    "# # lv_Sm = supplied car level of car m\n",
+    "# lv_Sm = []\n",
+    "# for m in range(n_C):\n",
+    "#     level_supplied = int(df_car.loc[m, 'Level'])\n",
+    "#     lv_Sm.append(eg1.addVar(lb=level_supplied, vtype=GRB.INTEGER, name=\"lv_Sm\" + str(m+1)))\n",
     "\n",
     "# rtij = rearrangment time to move car from station i to station j\n",
     "rt = []\n",
@@ -163,12 +184,13 @@
     "for m in range(n_C):\n",
     "    O.append(eg1.addVar(lb=0, vtype = GRB.INTEGER, name = \"O\" + str(m+1)))\n",
     "\n",
-    "Cmax = eg1.addVar(lb = 48*n_D, vtype = GRB.INTEGER, name = \"Cmax\")"
+    "Cmax = eg1.addVar(lb = 48*n_D, vtype = GRB.INTEGER, name = \"Cmax\")\n",
+    "A = eg1.addVar(lb = 10000, vtype = GRB.INTEGER, name = \"a large number\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -188,17 +210,81 @@
       "text/plain": [
        "{0: <gurobi.Constr *Awaiting Model Update*>,\n",
        " 1: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 2: <gurobi.Constr *Awaiting Model Update*>}"
+       " 2: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 3: <gurobi.Constr *Awaiting Model Update*>,\n",
+       " 4: <gurobi.Constr *Awaiting Model Update*>}"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "eg1.addConstrs((quicksum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n",
-    "eg1.addConstrs((O[m] <= Cmax for m in range(n_C)), \"links the individual car makespan to the overall schedule makespan\")"
+    "eg1.addConstrs((O[m] <= Cmax for m in range(n_C)), \"links the individual car makespan to the overall schedule makespan\")\n",
+    "eg1.addConstrs((x[m][p]+x[m][q] <= z[p][q][m]+z[q][p][m]+1) for m in range(n_C) for p in range(n_K) for q in range(n_K))\n",
+    "eg1.addConstrs((C[p]+r[p]-C[q] <=  A * ( 1- z[p][q][m])) for m in range(n_C) for p in range(n_K) for q in range(n_K))\n",
+    "eg1.addConstrs(C[k] >= r[k] + 6 + 1 for k in range(n_K)) # 7 = 6單位的清潔+1單位的提前到點\n",
+    "eg1.addConstrs(C[k] >= 0 for k in range(n_K))\n",
+    "eg1.addConstrs(C[k] <= Cmax for k in range(n_K))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (win64)\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 98 rows, 983 columns and 316 nonzeros\n",
+      "Model fingerprint: 0x4921188b\n",
+      "Model has 75 quadratic constraints\n",
+      "Variable types: 0 continuous, 983 integer (954 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 2e+00]\n",
+      "  QMatrix range    [1e+00, 1e+00]\n",
+      "  QLMatrix range   [1e+00, 1e+00]\n",
+      "  Objective range  [1e+00, 1e+00]\n",
+      "  Bounds range     [1e+00, 2e+04]\n",
+      "  RHS range        [1e+00, 7e+00]\n",
+      "Presolve removed 0 rows and 879 columns\n",
+      "Presolve time: 0.00s\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
+      "\n",
+      "Solution count 0\n",
+      "\n",
+      "Model is infeasible or unbounded\n",
+      "Best objective -, best bound -, gap -\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "Unable to retrieve attribute 'ObjVal'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-213-22b1a60a5fb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"z* = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mObjVal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.getAttr\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc\\gurobipy\\attrutil.pxi\u001b[0m in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: Unable to retrieve attribute 'ObjVal'"
+     ]
+    }
+   ],
+   "source": [
+    "eg1.optimize()\n",
+    "print(\"z* = \", eg1.ObjVal)"
    ]
   },
   {
