--- a/OR_MP_P1.ipynb
+++ b/OR_MP_P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +141,20 @@
     "    x.append([])\n",
     "    for k in range(n_K):\n",
     "        x[m].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"x\" + str(m+1) + str(k+1)))\n",
+    "\n",
+    "# if there is no level-l's car in station i       \n",
+    "# (1) uik = 1 if order k is assigned to a car with a free upgrade\n",
+    "u = []\n",
+    "for i in range(n_S):\n",
+    "    u.append([])\n",
+    "    for k in range(n_K):\n",
+    "        u[i].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"u\" + str(i+1) + str(k+1)))\n",
+    "# (2) yik = 1 if if order k is assigned to a car that is moved from another station to station i\n",
+    "y = []\n",
+    "for i in range(n_S):\n",
+    "    y.append([])\n",
+    "    for k in range(n_K):\n",
+    "        y[i].append(eg1.addVar(lb = 0, vtype = GRB.BINARY, name = \"y\" + str(i+1) + str(k+1)))\n",
     "\n",
     "# Rk = revenue of order k\n",
     "R = []\n",
@@ -190,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,37 +216,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 1: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 2: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 3: <gurobi.Constr *Awaiting Model Update*>,\n",
-       " 4: <gurobi.Constr *Awaiting Model Update*>}"
+       "<gurobi.QConstr Not Yet Added>"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eg1.addConstrs((quicksum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n",
+    "eg1.addConstrs((sum(x[m][k] for m in range(n_C)) <= 1 for k in range(n_K)), \"每份order對應到一台車(但也可以不接單)\")\n",
     "eg1.addConstrs((O[m] <= Cmax for m in range(n_C)), \"links the individual car makespan to the overall schedule makespan\")\n",
     "eg1.addConstrs((x[m][p]+x[m][q] <= z[p][q][m]+z[q][p][m]+1) for m in range(n_C) for p in range(n_K) for q in range(n_K))\n",
     "eg1.addConstrs((C[p]+r[p]-C[q] <=  A * ( 1- z[p][q][m])) for m in range(n_C) for p in range(n_K) for q in range(n_K))\n",
     "eg1.addConstrs(C[k] >= r[k] + 6 + 1 for k in range(n_K)) # 7 = 6單位的清潔+1單位的提前到點\n",
     "eg1.addConstrs(C[k] >= 0 for k in range(n_K))\n",
-    "eg1.addConstrs(C[k] <= Cmax for k in range(n_K))\n"
+    "eg1.addConstrs(C[k] <= Cmax for k in range(n_K))\n",
+    "\n",
+    "# The total time spent on moving all cars cannot exceed B minutes\n",
+    "total_move_time = gurobipy.quicksum(rt[i][j] * y[i][k] for k in range(n_K) for i in range(n_S) for j in range(n_S))\n",
+    "eg1.addConstr(total_move_time <= B)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -244,10 +260,10 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 98 rows, 983 columns and 316 nonzeros\n",
-      "Model fingerprint: 0x4921188b\n",
-      "Model has 75 quadratic constraints\n",
-      "Variable types: 0 continuous, 983 integer (954 binary)\n",
+      "Optimize a model with 98 rows, 1003 columns and 316 nonzeros\n",
+      "Model fingerprint: 0x0c96a29e\n",
+      "Model has 76 quadratic constraints\n",
+      "Variable types: 0 continuous, 1003 integer (974 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+00]\n",
       "  QMatrix range    [1e+00, 1e+00]\n",
@@ -255,10 +271,11 @@
       "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 2e+04]\n",
       "  RHS range        [1e+00, 7e+00]\n",
-      "Presolve removed 0 rows and 879 columns\n",
+      "  QRHS range       [6e+00, 6e+00]\n",
+      "Presolve removed 0 rows and 889 columns\n",
       "Presolve time: 0.00s\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 0\n",
@@ -274,7 +291,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-213-22b1a60a5fb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"z* = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mObjVal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-264-22b1a60a5fb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"z* = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mObjVal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.__getattr__\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\model.pxi\u001b[0m in \u001b[0;36mgurobipy.Model.getAttr\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32msrc\\gurobipy\\attrutil.pxi\u001b[0m in \u001b[0;36mgurobipy.__getattr\u001b[1;34m()\u001b[0m\n",
